[tool.poetry]
name = "snakes_cafe"
version = "0.1.0"
description = ""
authors = ["Ulrich Wilfried Motchoffo Kom <motchoffow@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
